ex-2.05/manifests/deployment_edustats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edustats-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edustats-app
  template:
    metadata:
      labels:
        app: edustats-app
    spec:
      containers:
        - name: edustats
          image: aldahdouh/edustats
